--- a/pokemon.css
+++ b/pokemon.css
@@ -1,4 +1,4 @@
-   body {
+    body {
       font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
@@ -29,7 +29,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: radial-gradient(circle at center, #ffffff, #f3f3f3);
+      background: #f3f3f3;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -39,26 +39,13 @@
 
     #pantalla-inicial img {
       width: 150px;
-      cursor: pointer;
-      animation: saltar 1.5s infinite ease-in-out;
     }
 
-    @keyframes saltar {
-
-      0%,
-      100% {
-        transform: translateY(0);
-      }
-
-      50% {
-        transform: translateY(-20px);
-      }
-    }
 
     #pantalla-inicial h1 {
       margin-top: 20px;
       font-size: 24px;
-      color: #444;
+      color: black;
     }
 
     .contenedor-principal {
